outputs/tsp_constructive-constructive/2025-09-20_10-02-31/evaluations/problem_eval3779889672517136960_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined as the difference between the current distance and the best possible distance to remaining nodes, balancing immediate and long-term efficiency with a dynamic weight factor.}
                                                                                                                                                                                        ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined as the difference between the current distance and the best possible distance to remaining nodes, balancing immediate and long-term efficiency with a dynamic weight factor.}
                                                                                                                                                                                        ^
SyntaxError: unmatched '}'
